--- a/entries/preread.html
+++ b/entries/preread.html
@@ -7,19 +7,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <style media="screen">
     </style>
   </head>
   <body>
 
     <div id = "header">
-      <p>Pre Read</h1>
+      <a href="../index.html"><p>Entries</p></a>
       <hr>
     </div> 
 
-    <div id = "contents">
-      <p></p>
+    <div id = "entry-contents">
+      <p id = "title">PRE READ - </p>
+      <p>a few years ago, I came across Joan Didion's essay titled "Why I Write." while the specifics of the essay have faded from my memory, the title has always stuck with me. originally coined by Orwell, the title is obviously extremely catchy… but also a sad reminder of what I lack
+      </p>
+
+      <p>navigating my relationship with writing has been a constant challenge. I find immense pleasure in immersing myself in the written works of others, considering it a profound form of intimacy. the power of words has consistently served as a source of solace, especially in moments where I struggle to articulate or process my emotions. exposure to the vulnerability captured by others served as a form of avoidance, hindering any motivation to express myself and my own feelings; I thought the inherent vulnerability in both the act of writing and the result of the product was something I could leech from others. but at the end of the day, I’m probably doing myself a great disservice..
+      </p>
+
+      <p>with the start of the new year, I want to challenge myself by consistently processing and writing. I don’t expect these short journal entries to be anything spectacular, but I do hope to improve on these three specific aspects through this:
+      </p>
+      <ul>
+        <li>rediscovering what makes me passionate; dropping detachment
+        </li>
+        <li>becoming confident in my voice and perspectives 
+        </li>
+        <li>owning my emotions
+        </li>
+      </li>
 
     </div>
 
