--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <body>
 
     <div id = "header">
-      <p>Entries</h1>
+      <p>Entries</p>
       <hr>
     </div> 
 
     <div id = "contents">
       <p>01.21.24</p>
-      <p><link href="/entries/preread.html">Pre Read</p>
+      <a href="entries/preread.html">Pre Read</a>
 
     </div>
 
