--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </div> 
 
     <div id = "contents">
-      <p>01.21.24</p>
+      <a href="entries/24-05-03.html">On Its Hard to Find a Good Lamp (1993)</a>
+      <br>
+      <br>
       <a href="entries/preread.html">Pre Read</a>
 
     </div>
