--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </div> 
 
     <div id = "contents">
+      <a href="entries/24-05-02.html">On The Birth of My Daughter, The Death of My Marriage (2024)</a>
+      <br>
+      <br>
+      <a href="entries/24-05-23.html">On How We Learned to be Lonely (2023)</a>
+      <br>
+      <br>
       <a href="entries/24-05-03.html">On Its Hard to Find a Good Lamp (1993)</a>
       <br>
       <br>
